# ClaudeHack

./: .gitignore  README.md  main2.py  pyproject.toml  streamlit_ui.py
data/: ae.csv  dm.csv  lb.csv  mh.csv  vs.csv
models/: sdtm_models.py  summary_models.py
scripts/: seed_kb.py
services/: ollama_client.py  summarizers.py  triage.py
utils/: data_loader.py
