[project]
name = "sdtm-data-process-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
